frontend/test/should_pass/attrib_031.grg
using attrib_model_001;

rule r {
	ni:NINT -e:Edge-> .;

	modify {
		ni -ei:EINT-> ni;
		delete(e);

		eval{
			ei.a = 23;
		}
	}
}

